# advent-of-code-rs

./: Cargo.toml
benches/2023_day_05/: input.txt  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: cli.rs  lib.rs  main.rs
src/common/: debugging.rs  mod.rs  parsing.rs
src/common/math_2d/: grid.rs  mod.rs  point.rs  vector.rs
src/year_2022/: mod.rs
src/year_2022/day_02/: mod.rs
src/year_2022/day_03/: mod.rs
src/year_2022/day_04/: mod.rs
src/year_2022/day_05/: mod.rs
src/year_2022/day_06/: mod.rs
src/year_2022/day_07/: mod.rs
src/year_2022/day_08/: mod.rs
src/year_2022/day_09/: mod.rs
src/year_2022/day_10/: mod.rs
src/year_2022/day_11/: mod.rs
src/year_2022/day_12/: mod.rs
src/year_2022/day_13/: mod.rs
src/year_2023/: mod.rs
src/year_2023/day_01/: mod.rs
src/year_2023/day_02/: mod.rs
src/year_2023/day_03/: mod.rs
src/year_2023/day_04/: mod.rs
src/year_2023/day_05/: mod.rs
src/year_2023/day_06/: mod.rs
src/year_2023/day_07/: joker_rule.rs  mod.rs  no_joker_hand.rs  no_joker_rule.rs
src/year_2023/day_08/: mod.rs
src/year_2023/day_09/: mod.rs
src/year_2023/day_10/: mod.rs
src/year_2023/day_11/: mod.rs
src/year_2023/day_13/: mod.rs
src/year_2024/: mod.rs
src/year_2024/day_01/: mod.rs  part_1.rs  part_2.rs
src/year_2024/day_02/: mod.rs  part_1.rs  part_2.rs
src/year_2024/day_03/: mod.rs  part_1.rs  part_2.rs
src/year_2024/day_04/: mod.rs  part_1.rs  part_2.rs
src/year_2024/day_05/: mod.rs  part_1.rs  (+2 more)
src/year_2025/: mod.rs
tests/: cli_tests.rs
tests/cmd/: errors.md  year_2023.md  year_2024.md
(+58 files in other folders)
